Fix to vertical align the table headers.

--- a/client/views/reports/reports.scss
+++ b/client/views/reports/reports.scss
@@ -7,6 +7,10 @@
 	z-index: 800;
 }
 
+.table thead>tr>th.vert-align{
+    vertical-align: middle;
+}
+
 .table thead tr th {
 	text-align: center;   
 }
